# QuorumCall

./: .gitignore  CLAUDE.md  README.md  build.nix  example_poll.json  example_poll.toml  flake.nix  module.nix  pyproject.toml  shell.nix
docs/: api.md  configuration.md  index.md  install.md  nixos.md  questions.md
docs/development/: architecture.md  testing.md
src/: builder.py  cli.py  console.py  db.py  log.py  main.py  questions.py  results.py  routes.py  schemas.py  settings.py  ui.py
src/quorumcall/: cli.py  db.py  html.py  log.py  main.py
tests/: conftest.py  test_cli.py  test_db.py  test_integration.py  test_main.py  test_misc.py
