[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "quorumcall"
dynamic = ["version"]
description = "Internal polling server"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.100",
    "uvicorn>=0.20",
    "python-multipart>=0.0.6",
    "rich>=13",
]

[project.scripts]
quorumcall = "cli:main"

[project.optional-dependencies]
test = [
    "pytest>=7",
    "pytest-cov>=4",
    "pytest-sugar>=1",
    "httpx>=0.24",
]

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = ["builder", "cli", "console", "db", "log", "main", "questions", "results", "routes", "schemas", "settings", "ui", "_version"]

[tool.setuptools.dynamic]
version = {attr = "_version.__version__"}

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-m 'not integration'"
markers = [
    "integration: full HTTP stack via subprocess (slow) — run with: pytest -m integration",
]

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
show_missing = true
